--- a/src/main/java/fr/sparadrap/ecf/view/swingview/HomePanel.form
+++ b/src/main/java/fr/sparadrap/ecf/view/swingview/HomePanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.sparadrah.ecf.view.swingview.HomePanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.sparadrap.ecf.view.swingview.HomePanel">
   <grid id="27dc6" binding="homePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="701" height="536"/>
@@ -18,7 +18,7 @@
             <constraints border-constraint="Center"/>
             <properties>
               <horizontalAlignment value="0"/>
-              <text value="Bienvenue sur Sparadrah"/>
+              <text value="Bienvenue sur sparadrap"/>
             </properties>
           </component>
         </children>
