--- a/src/main/java/fr/sparadrap/ecf/view/swingview/doctor/DoctorsPanel.form
+++ b/src/main/java/fr/sparadrap/ecf/view/swingview/doctor/DoctorsPanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.sparadrah.ecf.view.swingview.doctor.DoctorsPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.sparadrap.ecf.view.swingview.doctor.DoctorsPanel">
   <grid id="27dc6" binding="doctorsPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="911" height="645"/>
@@ -28,7 +28,7 @@
                 <properties>
                   <background color="-12020664"/>
                   <foreground color="-328193"/>
-                  <icon value="fr/sparadrah/ecf/view/swingview/ressources/ajouter.png"/>
+                  <icon value="fr/sparadrap/ecf/view/swingview/ressources/ajouter.png"/>
                   <text value=""/>
                   <toolTipText value="Nouveau client"/>
                 </properties>
@@ -142,7 +142,7 @@
               <component id="77db2" class="javax.swing.JButton" binding="searchButton">
                 <constraints/>
                 <properties>
-                  <icon value="fr/sparadrah/ecf/view/swingview/ressources/recherche.png"/>
+                  <icon value="fr/sparadrap/ecf/view/swingview/ressources/recherche.png"/>
                   <text value=""/>
                   <toolTipText value="Rechercher"/>
                 </properties>
