--- a/src/main/java/fr/sparadrap/ecf/view/swingview/menu/MainMenu.form
+++ b/src/main/java/fr/sparadrap/ecf/view/swingview/menu/MainMenu.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.sparadrah.ecf.view.swingview.menu.MainMenu">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.sparadrap.ecf.view.swingview.menu.MainMenu">
   <grid id="27dc6" binding="containerMenu" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="860" height="506"/>
@@ -67,7 +67,7 @@
               <grid row="11" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="👨‍⚕️ Gestion Médecins"/>
+              <text value="👨‍  Gestion Médecins"/>
             </properties>
           </component>
           <component id="12fce" class="javax.swing.JButton" binding="medicineManagerBtn">
@@ -75,7 +75,6 @@
               <grid row="12" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <icon value="fr/sparadrah/ecf/view/swingview/ressources/travaux-routiers.png"/>
               <text value="💊 Gestion des Stocks"/>
             </properties>
           </component>
@@ -123,7 +122,6 @@
               <grid row="8" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <icon value="fr/sparadrah/ecf/view/swingview/ressources/travaux-routiers.png"/>
               <text value="Historique des ordonnances"/>
             </properties>
           </component>
