Connexion a la bdd

--- a/src/main/java/fr/sparadrap/ecf/view/swingview/HomePanel.form
+++ b/src/main/java/fr/sparadrap/ecf/view/swingview/HomePanel.form
@@ -23,8 +23,7 @@
           </component>
         </children>
       </grid>
-      <grid id="41a7d" binding="centerPanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <grid id="41a7d" binding="centerPanel" layout-manager="GridBagLayout">
         <constraints border-constraint="Center"/>
         <properties/>
         <border type="none"/>
@@ -32,6 +31,7 @@
           <grid id="6bbeb" binding="detailsClientContainer" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="1.0" weighty="1.0"/>
             </constraints>
             <properties/>
             <border type="line" title="Afficher les details cllent"/>
@@ -75,6 +75,7 @@
           <grid id="7e37b" binding="StatPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="1.0" weighty="1.0"/>
             </constraints>
             <properties/>
             <border type="line" title="Statistiques"/>
@@ -83,6 +84,7 @@
           <grid id="93256" binding="detailsDoctorContainer" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="1.0" weighty="1.0"/>
             </constraints>
             <properties/>
             <border type="line" title="Afficher les details medecin"/>
