--- a/src/main/java/fr/sparadrap/ecf/view/swingview/menu/MainMenu.form
+++ b/src/main/java/fr/sparadrap/ecf/view/swingview/menu/MainMenu.form
@@ -9,8 +9,7 @@
       <color color="-2104859"/>
     </border>
     <children>
-      <grid id="aeb61" binding="menu" layout-manager="GridLayoutManager" row-count="16" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <grid id="aeb61" binding="menu" layout-manager="GridBagLayout">
         <constraints border-constraint="Center"/>
         <properties/>
         <border type="none"/>
@@ -18,6 +17,7 @@
           <component id="aebaf" class="javax.swing.JLabel" binding="purchaseLabel">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Achat"/>
@@ -26,6 +26,7 @@
           <component id="d6fc0" class="javax.swing.JButton" binding="directPurchaseBtn">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Achat Direct"/>
@@ -35,6 +36,7 @@
           <component id="daae9" class="javax.swing.JButton" binding="presciptedPurchaseBtn">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="1.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Achat avec Ordonnance"/>
@@ -43,12 +45,14 @@
           <component id="22200" class="javax.swing.JSeparator">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="1.0"/>
             </constraints>
             <properties/>
           </component>
           <component id="22e5c" class="javax.swing.JLabel">
             <constraints>
               <grid row="9" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Gestion"/>
@@ -57,6 +61,7 @@
           <component id="4f1df" class="javax.swing.JButton" binding="doctorsManagerBtn">
             <constraints>
               <grid row="11" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Gestion Médecins"/>
@@ -65,6 +70,7 @@
           <component id="12fce" class="javax.swing.JButton" binding="medicineManagerBtn">
             <constraints>
               <grid row="12" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Gestion des Stocks"/>
@@ -73,12 +79,14 @@
           <component id="da326" class="javax.swing.JSeparator">
             <constraints>
               <grid row="13" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="1.0"/>
             </constraints>
             <properties/>
           </component>
           <component id="5e4dc" class="javax.swing.JButton" binding="exitButton">
             <constraints>
               <grid row="15" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Quitter"/>
@@ -87,6 +95,7 @@
           <component id="b2ebf" class="javax.swing.JButton" binding="homeBtn">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Acceuil"/>
@@ -95,23 +104,21 @@
           <component id="25c8c" class="javax.swing.JSeparator">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="1.0"/>
             </constraints>
             <properties/>
           </component>
-          <vspacer id="6759e">
-            <constraints>
-              <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
           <component id="fb382" class="javax.swing.JSeparator">
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="1.0"/>
             </constraints>
             <properties/>
           </component>
           <component id="bffde" class="javax.swing.JButton" binding="prescriptionsHistoryBtn">
             <constraints>
               <grid row="8" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Historique des ordonnances"/>
@@ -120,6 +127,7 @@
           <component id="27634" class="javax.swing.JButton" binding="purchaseHistoryBtn">
             <constraints>
               <grid row="7" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Historique des achats"/>
@@ -128,6 +136,7 @@
           <component id="c3a2f" class="javax.swing.JLabel">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Historique"/>
@@ -136,6 +145,7 @@
           <component id="291d5" class="javax.swing.JButton" binding="customerManagerBtn">
             <constraints>
               <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Gestion Clients"/>
